Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR
    MULT

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM_KW ID OPENING_BRACE field_decl_list method_decl_list CLOSING_BRACE
Rule 2     field_decl_list -> field_decl field_decl_list
Rule 3     field_decl_list -> <empty>
Rule 4     field_decl -> type field_name_list SEMICOLON
Rule 5     field_name_list -> field_name COMMA field_name_list
Rule 6     field_name_list -> field_name
Rule 7     field_name -> ID OPENING_BRACKET INT_CONSTANT CLOSING_BRACKET
Rule 8     field_name -> ID
Rule 9     method_decl_list -> method_decl method_decl_list
Rule 10    method_decl_list -> <empty>
Rule 11    method_decl -> return_type ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block
Rule 12    method_call -> ID OPENING_PARENTHESES actual_parameters CLOSING_PARENTHESES
Rule 13    method_call -> CALLOUT_KW OPENING_PARENTHESES STRING_CONSTANT callout_parameters CLOSING_PARENTHESES
Rule 14    actual_parameters -> actual_parameter_list
Rule 15    actual_parameters -> <empty>
Rule 16    actual_parameter_list -> expr COMMA actual_parameter_list
Rule 17    actual_parameter_list -> expr
Rule 18    callout_parameters -> COMMA callout_parameter_list
Rule 19    callout_parameters -> expr
Rule 20    callout_parameter_list -> expr COMMA callout_parameter_list
Rule 21    callout_parameter_list -> expr
Rule 22    formal_parameter_list -> argumant_list
Rule 23    formal_parameter_list -> <empty>
Rule 24    argumant_list -> type ID COMMA argumant_list
Rule 25    argumant_list -> type ID
Rule 26    type -> INT_KW
Rule 27    type -> FLOAT_KW
Rule 28    type -> CHAR_KW
Rule 29    type -> BOOL_KW
Rule 30    constant -> INT_CONSTANT
Rule 31    constant -> FLOAT_CONSTANT
Rule 32    constant -> CHAR_CONSTANT
Rule 33    constant -> BOOL_CONSTANT
Rule 34    return_type -> type
Rule 35    return_type -> VOID_KW
Rule 36    return_expr -> expr
Rule 37    return_expr -> <empty>
Rule 38    block -> OPENING_BRACE var_decl_list statement_list CLOSING_BRACE
Rule 39    var_decl_list -> var_decl var_decl_list
Rule 40    var_decl_list -> <empty>
Rule 41    var_decl -> type id_list SEMICOLON
Rule 42    id_list -> ID COMMA id_list
Rule 43    id_list -> ID
Rule 44    statement_list -> statement statement_list
Rule 45    statement_list -> <empty>
Rule 46    statement -> assignment SEMICOLON
Rule 47    statement -> method_call SEMICOLON
Rule 48    statement -> IF_KW OPENING_PARENTHESES expr CLOSING_PARENTHESES THEN_KW block SEMICOLON
Rule 49    statement -> IF_KW OPENING_PARENTHESES expr CLOSING_PARENTHESES THEN_KW block ELSE_KW block SEMICOLON
Rule 50    statement -> WHILE_KW OPENING_PARENTHESES expr CLOSING_PARENTHESES block SEMICOLON
Rule 51    statement -> FOR_KW OPENING_PARENTHESES for_initialize SEMICOLON expr SEMICOLON assignment CLOSING_PARENTHESES block SEMICOLON
Rule 52    statement -> SWITCH_KW OPENING_PARENTHESES ID CLOSING_PARENTHESES OPENING_BRACE case_statements CLOSING_BRACE SEMICOLON
Rule 53    statement -> RETURN_KW return_expr SEMICOLON
Rule 54    statement -> BREAK_KW SEMICOLON
Rule 55    statement -> CONTINUE_KW SEMICOLON
Rule 56    statement -> block
Rule 57    statement -> READ_KW OPENING_PARENTHESES ID CLOSING_PARENTHESES SEMICOLON
Rule 58    statement -> WRITE_KW OPENING_PARENTHESES write_parameter CLOSING_PARENTHESES SEMICOLON
Rule 59    statement -> SEMICOLON
Rule 60    case_statements -> CASE_KW constant COLON statement case_statements
Rule 61    case_statements -> DEFAULT_KW COLON statement
Rule 62    case_statements -> <empty>
Rule 63    write_parameter -> expr
Rule 64    write_parameter -> STRING_CONSTANT
Rule 65    assignment -> location EXP expr
Rule 66    assignment -> location
Rule 67    for_initialize -> assignment
Rule 68    for_initialize -> <empty>
Rule 69    location -> ID
Rule 70    location -> ID OPENING_BRACKET expr CLOSING_BRACKET
Rule 71    expr -> location
Rule 72    expr -> constant
Rule 73    expr -> OPENING_PARENTHESES expr CLOSING_PARENTHESES
Rule 74    expr -> method_call
Rule 75    expr -> operational_expr
Rule 76    operational_expr -> expr LT expr
Rule 77    operational_expr -> expr LE expr
Rule 78    operational_expr -> expr GT expr
Rule 79    operational_expr -> expr GE expr
Rule 80    operational_expr -> expr EQ expr
Rule 81    operational_expr -> expr NE expr
Rule 82    operational_expr -> expr AND expr
Rule 83    operational_expr -> expr OR expr
Rule 84    operational_expr -> expr AND_THEN expr
Rule 85    operational_expr -> expr OR_ELSE expr
Rule 86    operational_expr -> expr PLUS expr
Rule 87    operational_expr -> expr MINUS expr
Rule 88    operational_expr -> expr DIV expr
Rule 89    operational_expr -> expr REM expr
Rule 90    operational_expr -> SHR expr
Rule 91    operational_expr -> SHL expr
Rule 92    operational_expr -> MINUS expr
Rule 93    operational_expr -> NOT expr

Terminals, with rules where they appear

AND                  : 82
AND_THEN             : 84
BOOL_CONSTANT        : 33
BOOL_KW              : 29
BREAK_KW             : 54
CALLOUT_KW           : 13
CASE_KW              : 60
CHAR_CONSTANT        : 32
CHAR_KW              : 28
CLOSING_BRACE        : 1 38 52
CLOSING_BRACKET      : 7 70
CLOSING_PARENTHESES  : 11 12 13 48 49 50 51 52 57 58 73
COLON                : 60 61
COMMA                : 5 16 18 20 24 42
CONTINUE_KW          : 55
DEFAULT_KW           : 61
DIV                  : 88
ELSE_KW              : 49
EQ                   : 80
ERROR                : 
EXP                  : 65
FLOAT_CONSTANT       : 31
FLOAT_KW             : 27
FOR_KW               : 51
GE                   : 79
GT                   : 78
ID                   : 1 7 8 11 12 24 25 42 43 52 57 69 70
IF_KW                : 48 49
INT_CONSTANT         : 7 30
INT_KW               : 26
LE                   : 77
LT                   : 76
MINUS                : 87 92
MULT                 : 
NE                   : 81
NOT                  : 93
OPENING_BRACE        : 1 38 52
OPENING_BRACKET      : 7 70
OPENING_PARENTHESES  : 11 12 13 48 49 50 51 52 57 58 73
OR                   : 83
OR_ELSE              : 85
PLUS                 : 86
PROGRAM_KW           : 1
READ_KW              : 57
REM                  : 89
RETURN_KW            : 53
SEMICOLON            : 4 41 46 47 48 49 50 51 51 51 52 53 54 55 57 58 59
SHL                  : 91
SHR                  : 90
STRING_CONSTANT      : 13 64
SWITCH_KW            : 52
THEN_KW              : 48 49
VOID_KW              : 35
WHILE_KW             : 50
WRITE_KW             : 58
error                : 

Nonterminals, with rules where they appear

actual_parameter_list : 14 16
actual_parameters    : 12
argumant_list        : 22 24
assignment           : 46 51 67
block                : 11 48 49 49 50 51 56
callout_parameter_list : 18 20
callout_parameters   : 13
case_statements      : 52 60
constant             : 60 72
expr                 : 16 17 19 20 21 36 48 49 50 51 63 65 70 73 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 91 92 93
field_decl           : 2
field_decl_list      : 1 2
field_name           : 5 6
field_name_list      : 4 5
for_initialize       : 51
formal_parameter_list : 11
id_list              : 41 42
location             : 65 66 71
method_call          : 47 74
method_decl          : 9
method_decl_list     : 1 9
operational_expr     : 75
program              : 0
return_expr          : 53
return_type          : 11
statement            : 44 60 61
statement_list       : 38 44
type                 : 4 24 25 34 41
var_decl             : 39
var_decl_list        : 38 39
write_parameter      : 58

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM_KW ID OPENING_BRACE field_decl_list method_decl_list CLOSING_BRACE

    PROGRAM_KW      shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM_KW . ID OPENING_BRACE field_decl_list method_decl_list CLOSING_BRACE

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM_KW ID . OPENING_BRACE field_decl_list method_decl_list CLOSING_BRACE

    OPENING_BRACE   shift and go to state 4


state 4

    (1) program -> PROGRAM_KW ID OPENING_BRACE . field_decl_list method_decl_list CLOSING_BRACE
    (2) field_decl_list -> . field_decl field_decl_list
    (3) field_decl_list -> .
    (4) field_decl -> . type field_name_list SEMICOLON
    (26) type -> . INT_KW
    (27) type -> . FLOAT_KW
    (28) type -> . CHAR_KW
    (29) type -> . BOOL_KW

  ! shift/reduce conflict for INT_KW resolved as shift
  ! shift/reduce conflict for FLOAT_KW resolved as shift
  ! shift/reduce conflict for CHAR_KW resolved as shift
  ! shift/reduce conflict for BOOL_KW resolved as shift
    VOID_KW         reduce using rule 3 (field_decl_list -> .)
    CLOSING_BRACE   reduce using rule 3 (field_decl_list -> .)
    INT_KW          shift and go to state 8
    FLOAT_KW        shift and go to state 9
    CHAR_KW         shift and go to state 10
    BOOL_KW         shift and go to state 11

  ! INT_KW          [ reduce using rule 3 (field_decl_list -> .) ]
  ! FLOAT_KW        [ reduce using rule 3 (field_decl_list -> .) ]
  ! CHAR_KW         [ reduce using rule 3 (field_decl_list -> .) ]
  ! BOOL_KW         [ reduce using rule 3 (field_decl_list -> .) ]

    field_decl_list                shift and go to state 5
    field_decl                     shift and go to state 6
    type                           shift and go to state 7

state 5

    (1) program -> PROGRAM_KW ID OPENING_BRACE field_decl_list . method_decl_list CLOSING_BRACE
    (9) method_decl_list -> . method_decl method_decl_list
    (10) method_decl_list -> .
    (11) method_decl -> . return_type ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block
    (34) return_type -> . type
    (35) return_type -> . VOID_KW
    (26) type -> . INT_KW
    (27) type -> . FLOAT_KW
    (28) type -> . CHAR_KW
    (29) type -> . BOOL_KW

    CLOSING_BRACE   reduce using rule 10 (method_decl_list -> .)
    VOID_KW         shift and go to state 16
    INT_KW          shift and go to state 8
    FLOAT_KW        shift and go to state 9
    CHAR_KW         shift and go to state 10
    BOOL_KW         shift and go to state 11

    method_decl_list               shift and go to state 12
    method_decl                    shift and go to state 13
    return_type                    shift and go to state 14
    type                           shift and go to state 15

state 6

    (2) field_decl_list -> field_decl . field_decl_list
    (2) field_decl_list -> . field_decl field_decl_list
    (3) field_decl_list -> .
    (4) field_decl -> . type field_name_list SEMICOLON
    (26) type -> . INT_KW
    (27) type -> . FLOAT_KW
    (28) type -> . CHAR_KW
    (29) type -> . BOOL_KW

  ! shift/reduce conflict for INT_KW resolved as shift
  ! shift/reduce conflict for FLOAT_KW resolved as shift
  ! shift/reduce conflict for CHAR_KW resolved as shift
  ! shift/reduce conflict for BOOL_KW resolved as shift
    VOID_KW         reduce using rule 3 (field_decl_list -> .)
    CLOSING_BRACE   reduce using rule 3 (field_decl_list -> .)
    INT_KW          shift and go to state 8
    FLOAT_KW        shift and go to state 9
    CHAR_KW         shift and go to state 10
    BOOL_KW         shift and go to state 11

  ! INT_KW          [ reduce using rule 3 (field_decl_list -> .) ]
  ! FLOAT_KW        [ reduce using rule 3 (field_decl_list -> .) ]
  ! CHAR_KW         [ reduce using rule 3 (field_decl_list -> .) ]
  ! BOOL_KW         [ reduce using rule 3 (field_decl_list -> .) ]

    field_decl                     shift and go to state 6
    field_decl_list                shift and go to state 17
    type                           shift and go to state 7

state 7

    (4) field_decl -> type . field_name_list SEMICOLON
    (5) field_name_list -> . field_name COMMA field_name_list
    (6) field_name_list -> . field_name
    (7) field_name -> . ID OPENING_BRACKET INT_CONSTANT CLOSING_BRACKET
    (8) field_name -> . ID

    ID              shift and go to state 20

    field_name_list                shift and go to state 18
    field_name                     shift and go to state 19

state 8

    (26) type -> INT_KW .

    ID              reduce using rule 26 (type -> INT_KW .)


state 9

    (27) type -> FLOAT_KW .

    ID              reduce using rule 27 (type -> FLOAT_KW .)


state 10

    (28) type -> CHAR_KW .

    ID              reduce using rule 28 (type -> CHAR_KW .)


state 11

    (29) type -> BOOL_KW .

    ID              reduce using rule 29 (type -> BOOL_KW .)


state 12

    (1) program -> PROGRAM_KW ID OPENING_BRACE field_decl_list method_decl_list . CLOSING_BRACE

    CLOSING_BRACE   shift and go to state 21


state 13

    (9) method_decl_list -> method_decl . method_decl_list
    (9) method_decl_list -> . method_decl method_decl_list
    (10) method_decl_list -> .
    (11) method_decl -> . return_type ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block
    (34) return_type -> . type
    (35) return_type -> . VOID_KW
    (26) type -> . INT_KW
    (27) type -> . FLOAT_KW
    (28) type -> . CHAR_KW
    (29) type -> . BOOL_KW

    CLOSING_BRACE   reduce using rule 10 (method_decl_list -> .)
    VOID_KW         shift and go to state 16
    INT_KW          shift and go to state 8
    FLOAT_KW        shift and go to state 9
    CHAR_KW         shift and go to state 10
    BOOL_KW         shift and go to state 11

    method_decl                    shift and go to state 13
    method_decl_list               shift and go to state 22
    return_type                    shift and go to state 14
    type                           shift and go to state 15

state 14

    (11) method_decl -> return_type . ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block

    ID              shift and go to state 23


state 15

    (34) return_type -> type .

    ID              reduce using rule 34 (return_type -> type .)


state 16

    (35) return_type -> VOID_KW .

    ID              reduce using rule 35 (return_type -> VOID_KW .)


state 17

    (2) field_decl_list -> field_decl field_decl_list .

    VOID_KW         reduce using rule 2 (field_decl_list -> field_decl field_decl_list .)
    INT_KW          reduce using rule 2 (field_decl_list -> field_decl field_decl_list .)
    FLOAT_KW        reduce using rule 2 (field_decl_list -> field_decl field_decl_list .)
    CHAR_KW         reduce using rule 2 (field_decl_list -> field_decl field_decl_list .)
    BOOL_KW         reduce using rule 2 (field_decl_list -> field_decl field_decl_list .)
    CLOSING_BRACE   reduce using rule 2 (field_decl_list -> field_decl field_decl_list .)


state 18

    (4) field_decl -> type field_name_list . SEMICOLON

    SEMICOLON       shift and go to state 24


state 19

    (5) field_name_list -> field_name . COMMA field_name_list
    (6) field_name_list -> field_name .

    COMMA           shift and go to state 25
    SEMICOLON       reduce using rule 6 (field_name_list -> field_name .)


state 20

    (7) field_name -> ID . OPENING_BRACKET INT_CONSTANT CLOSING_BRACKET
    (8) field_name -> ID .

    OPENING_BRACKET shift and go to state 26
    COMMA           reduce using rule 8 (field_name -> ID .)
    SEMICOLON       reduce using rule 8 (field_name -> ID .)


state 21

    (1) program -> PROGRAM_KW ID OPENING_BRACE field_decl_list method_decl_list CLOSING_BRACE .

    $end            reduce using rule 1 (program -> PROGRAM_KW ID OPENING_BRACE field_decl_list method_decl_list CLOSING_BRACE .)


state 22

    (9) method_decl_list -> method_decl method_decl_list .

    CLOSING_BRACE   reduce using rule 9 (method_decl_list -> method_decl method_decl_list .)


state 23

    (11) method_decl -> return_type ID . OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block

    OPENING_PARENTHESES shift and go to state 27


state 24

    (4) field_decl -> type field_name_list SEMICOLON .

    INT_KW          reduce using rule 4 (field_decl -> type field_name_list SEMICOLON .)
    FLOAT_KW        reduce using rule 4 (field_decl -> type field_name_list SEMICOLON .)
    CHAR_KW         reduce using rule 4 (field_decl -> type field_name_list SEMICOLON .)
    BOOL_KW         reduce using rule 4 (field_decl -> type field_name_list SEMICOLON .)
    VOID_KW         reduce using rule 4 (field_decl -> type field_name_list SEMICOLON .)
    CLOSING_BRACE   reduce using rule 4 (field_decl -> type field_name_list SEMICOLON .)


state 25

    (5) field_name_list -> field_name COMMA . field_name_list
    (5) field_name_list -> . field_name COMMA field_name_list
    (6) field_name_list -> . field_name
    (7) field_name -> . ID OPENING_BRACKET INT_CONSTANT CLOSING_BRACKET
    (8) field_name -> . ID

    ID              shift and go to state 20

    field_name                     shift and go to state 19
    field_name_list                shift and go to state 28

state 26

    (7) field_name -> ID OPENING_BRACKET . INT_CONSTANT CLOSING_BRACKET

    INT_CONSTANT    shift and go to state 29


state 27

    (11) method_decl -> return_type ID OPENING_PARENTHESES . formal_parameter_list CLOSING_PARENTHESES block
    (22) formal_parameter_list -> . argumant_list
    (23) formal_parameter_list -> .
    (24) argumant_list -> . type ID COMMA argumant_list
    (25) argumant_list -> . type ID
    (26) type -> . INT_KW
    (27) type -> . FLOAT_KW
    (28) type -> . CHAR_KW
    (29) type -> . BOOL_KW

    CLOSING_PARENTHESES reduce using rule 23 (formal_parameter_list -> .)
    INT_KW          shift and go to state 8
    FLOAT_KW        shift and go to state 9
    CHAR_KW         shift and go to state 10
    BOOL_KW         shift and go to state 11

    formal_parameter_list          shift and go to state 30
    argumant_list                  shift and go to state 31
    type                           shift and go to state 32

state 28

    (5) field_name_list -> field_name COMMA field_name_list .

    SEMICOLON       reduce using rule 5 (field_name_list -> field_name COMMA field_name_list .)


state 29

    (7) field_name -> ID OPENING_BRACKET INT_CONSTANT . CLOSING_BRACKET

    CLOSING_BRACKET shift and go to state 33


state 30

    (11) method_decl -> return_type ID OPENING_PARENTHESES formal_parameter_list . CLOSING_PARENTHESES block

    CLOSING_PARENTHESES shift and go to state 34


state 31

    (22) formal_parameter_list -> argumant_list .

    CLOSING_PARENTHESES reduce using rule 22 (formal_parameter_list -> argumant_list .)


state 32

    (24) argumant_list -> type . ID COMMA argumant_list
    (25) argumant_list -> type . ID

    ID              shift and go to state 35


state 33

    (7) field_name -> ID OPENING_BRACKET INT_CONSTANT CLOSING_BRACKET .

    COMMA           reduce using rule 7 (field_name -> ID OPENING_BRACKET INT_CONSTANT CLOSING_BRACKET .)
    SEMICOLON       reduce using rule 7 (field_name -> ID OPENING_BRACKET INT_CONSTANT CLOSING_BRACKET .)


state 34

    (11) method_decl -> return_type ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES . block
    (38) block -> . OPENING_BRACE var_decl_list statement_list CLOSING_BRACE

    OPENING_BRACE   shift and go to state 37

    block                          shift and go to state 36

state 35

    (24) argumant_list -> type ID . COMMA argumant_list
    (25) argumant_list -> type ID .

    COMMA           shift and go to state 38
    CLOSING_PARENTHESES reduce using rule 25 (argumant_list -> type ID .)


state 36

    (11) method_decl -> return_type ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block .

    VOID_KW         reduce using rule 11 (method_decl -> return_type ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block .)
    INT_KW          reduce using rule 11 (method_decl -> return_type ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block .)
    FLOAT_KW        reduce using rule 11 (method_decl -> return_type ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block .)
    CHAR_KW         reduce using rule 11 (method_decl -> return_type ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block .)
    BOOL_KW         reduce using rule 11 (method_decl -> return_type ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block .)
    CLOSING_BRACE   reduce using rule 11 (method_decl -> return_type ID OPENING_PARENTHESES formal_parameter_list CLOSING_PARENTHESES block .)


state 37

    (38) block -> OPENING_BRACE . var_decl_list statement_list CLOSING_BRACE
    (39) var_decl_list -> . var_decl var_decl_list
    (40) var_decl_list -> .
    (41) var_decl -> . type id_list SEMICOLON
    (26) type -> . INT_KW
    (27) type -> . FLOAT_KW
    (28) type -> . CHAR_KW
    (29) type -> . BOOL_KW

    IF_KW           reduce using rule 40 (var_decl_list -> .)
    WHILE_KW        reduce using rule 40 (var_decl_list -> .)
    FOR_KW          reduce using rule 40 (var_decl_list -> .)
    SWITCH_KW       reduce using rule 40 (var_decl_list -> .)
    RETURN_KW       reduce using rule 40 (var_decl_list -> .)
    BREAK_KW        reduce using rule 40 (var_decl_list -> .)
    CONTINUE_KW     reduce using rule 40 (var_decl_list -> .)
    READ_KW         reduce using rule 40 (var_decl_list -> .)
    WRITE_KW        reduce using rule 40 (var_decl_list -> .)
    SEMICOLON       reduce using rule 40 (var_decl_list -> .)
    ID              reduce using rule 40 (var_decl_list -> .)
    CALLOUT_KW      reduce using rule 40 (var_decl_list -> .)
    OPENING_BRACE   reduce using rule 40 (var_decl_list -> .)
    CLOSING_BRACE   reduce using rule 40 (var_decl_list -> .)
    INT_KW          shift and go to state 8
    FLOAT_KW        shift and go to state 9
    CHAR_KW         shift and go to state 10
    BOOL_KW         shift and go to state 11

    var_decl_list                  shift and go to state 39
    var_decl                       shift and go to state 40
    type                           shift and go to state 41

state 38

    (24) argumant_list -> type ID COMMA . argumant_list
    (24) argumant_list -> . type ID COMMA argumant_list
    (25) argumant_list -> . type ID
    (26) type -> . INT_KW
    (27) type -> . FLOAT_KW
    (28) type -> . CHAR_KW
    (29) type -> . BOOL_KW

    INT_KW          shift and go to state 8
    FLOAT_KW        shift and go to state 9
    CHAR_KW         shift and go to state 10
    BOOL_KW         shift and go to state 11

    type                           shift and go to state 32
    argumant_list                  shift and go to state 42

state 39

    (38) block -> OPENING_BRACE var_decl_list . statement_list CLOSING_BRACE
    (44) statement_list -> . statement statement_list
    (45) statement_list -> .
    (46) statement -> . assignment SEMICOLON
    (47) statement -> . method_call SEMICOLON
    (48) statement -> . IF_KW OPENING_PARENTHESES expr CLOSING_PARENTHESES THEN_KW block SEMICOLON
    (49) statement -> . IF_KW OPENING_PARENTHESES expr CLOSING_PARENTHESES THEN_KW block ELSE_KW block SEMICOLON
    (50) statement -> . WHILE_KW OPENING_PARENTHESES expr CLOSING_PARENTHESES block SEMICOLON
    (51) statement -> . FOR_KW OPENING_PARENTHESES for_initialize SEMICOLON expr SEMICOLON assignment CLOSING_PARENTHESES block SEMICOLON
    (52) statement -> . SWITCH_KW OPENING_PARENTHESES ID CLOSING_PARENTHESES OPENING_BRACE case_statements CLOSING_BRACE SEMICOLON
    (53) statement -> . RETURN_KW return_expr SEMICOLON
    (54) statement -> . BREAK_KW SEMICOLON
    (55) statement -> . CONTINUE_KW SEMICOLON
    (56) statement -> . block
    (57) statement -> . READ_KW OPENING_PARENTHESES ID CLOSING_PARENTHESES SEMICOLON
    (58) statement -> . WRITE_KW OPENING_PARENTHESES write_parameter CLOSING_PARENTHESES SEMICOLON
    (59) statement -> . SEMICOLON
    (65) assignment -> . location EXP expr
    (66) assignment -> . location
    (12) method_call -> . ID OPENING_PARENTHESES actual_parameters CLOSING_PARENTHESES
    (13) method_call -> . CALLOUT_KW OPENING_PARENTHESES STRING_CONSTANT callout_parameters CLOSING_PARENTHESES
    (38) block -> . OPENING_BRACE var_decl_list statement_list CLOSING_BRACE
    (69) location -> . ID
    (70) location -> . ID OPENING_BRACKET expr CLOSING_BRACKET

    CLOSING_BRACE   reduce using rule 45 (statement_list -> .)
